Downgrade to Java 8 as it has better support for JavaFX. Improve build.