@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>yankov</groupId>
@@ -11,22 +12,22 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
-        <jvm.test.argLine>--add-modules java.xml.bind -Djavax.persistence.schema-generation.database.action=drop-and-create</jvm.test.argLine>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <jvm.test.argLine>-Djavax.persistence.schema-generation.database.action=drop-and-create</jvm.test.argLine>
         <main.class>org.yankov.mso.application.MediaStorageOrganizer</main.class>
     </properties>
 
     <build>
+
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.xml.bind</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -70,22 +71,23 @@
                     </archive>
                 </configuration>
             </plugin>
+
         </plugins>
+
     </build>
 
     <dependencies>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -113,19 +115,17 @@
         </dependency>
 
         <dependency>
-            <groupId>jaudiotagger</groupId>
+            <groupId>org</groupId>
             <artifactId>jaudiotagger</artifactId>
-            <version>2.2.6</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/jaudiotagger-2.2.6.jar</systemPath>
+            <version>2.0.3</version>
         </dependency>
 
         <dependency>
-            <groupId>jflac</groupId>
-            <artifactId>jflac</artifactId>
-            <version>1.3</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/jflac-1.3.jar</systemPath>
+            <groupId>org.jflac</groupId>
+            <artifactId>jflac-codec</artifactId>
+            <version>1.5.2</version>
         </dependency>
+
     </dependencies>
+
 </project>
